// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyDatasetPrompt should not render button when canSave is false 1`] = `
<EuiPageContent
  className="inpEmptyDatasetPrompt"
  data-test-subj="emptyDatasetPrompt"
  grow={false}
  horizontalPosition="center"
>
  <EuiFlexGroup
    alignItems="center"
    direction="rowReverse"
    gutterSize="xl"
    wrap={true}
  >
    <EuiFlexItem
      className="inpEmptyDatasetPrompt__illustration"
      grow={1}
    >
      <DatasetIllustration />
    </EuiFlexItem>
    <EuiFlexItem
      className="inpEmptyDatasetPrompt__text"
      grow={2}
    >
      <EuiText
        grow={false}
      >
        <h2>
          <MemoizedFormattedMessage
            defaultMessage="You have data in OpenSearch."
            id="datasetManagement.emptyDatasetPrompt.youHaveData"
          />
          <br />
          <MemoizedFormattedMessage
            defaultMessage="Now, create an index pattern."
            id="datasetManagement.emptyDatasetPrompt.nowCreate"
          />
        </h2>
        <p>
          <MemoizedFormattedMessage
            defaultMessage="OpenSearch Dashboards requires an index pattern to identify which indices you want to explore. An index pattern can point to a specific index, for example, your log data from yesterday, or all indices that contain your log data."
            id="datasetManagement.emptyDatasetPrompt.datasetExplanation"
          />
        </p>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="xxl"
  />
  <EuiDescriptionList
    className="inpEmptyDatasetPrompt__footer"
    type="responsiveColumn"
  >
    <EuiDescriptionListTitle
      className="inpEmptyDatasetPrompt__title"
    >
      <MemoizedFormattedMessage
        defaultMessage="Want to learn more?"
        id="datasetManagement.emptyDatasetPrompt.learnMore"
      />
    </EuiDescriptionListTitle>
    <EuiDescriptionListDescription>
      <EuiLink
        external={true}
        href="testUrl"
        target="_blank"
      >
        <MemoizedFormattedMessage
          defaultMessage="Read documentation"
          id="datasetManagement.emptyDatasetPrompt.documentation"
        />
      </EuiLink>
    </EuiDescriptionListDescription>
  </EuiDescriptionList>
</EuiPageContent>
`;

exports[`EmptyDatasetPrompt should render normally with creationOptions 1`] = `
<EuiPageContent
  className="inpEmptyDatasetPrompt"
  data-test-subj="emptyDatasetPrompt"
  grow={false}
  horizontalPosition="center"
>
  <EuiFlexGroup
    alignItems="center"
    direction="rowReverse"
    gutterSize="xl"
    wrap={true}
  >
    <EuiFlexItem
      className="inpEmptyDatasetPrompt__illustration"
      grow={1}
    >
      <DatasetIllustration />
    </EuiFlexItem>
    <EuiFlexItem
      className="inpEmptyDatasetPrompt__text"
      grow={2}
    >
      <EuiText
        grow={false}
      >
        <h2>
          <MemoizedFormattedMessage
            defaultMessage="You have data in OpenSearch."
            id="datasetManagement.emptyDatasetPrompt.youHaveData"
          />
          <br />
          <MemoizedFormattedMessage
            defaultMessage="Now, create an index pattern."
            id="datasetManagement.emptyDatasetPrompt.nowCreate"
          />
        </h2>
        <p>
          <MemoizedFormattedMessage
            defaultMessage="OpenSearch Dashboards requires an index pattern to identify which indices you want to explore. An index pattern can point to a specific index, for example, your log data from yesterday, or all indices that contain your log data."
            id="datasetManagement.emptyDatasetPrompt.datasetExplanation"
          />
        </p>
        <CreateButton
          options={
            Array [
              Object {
                "onClick": [Function],
                "text": "default",
              },
            ]
          }
        >
          <MemoizedFormattedMessage
            defaultMessage="Create index pattern"
            id="datasetManagement.datasetTable.createBtn"
          />
        </CreateButton>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="xxl"
  />
  <EuiDescriptionList
    className="inpEmptyDatasetPrompt__footer"
    type="responsiveColumn"
  >
    <EuiDescriptionListTitle
      className="inpEmptyDatasetPrompt__title"
    >
      <MemoizedFormattedMessage
        defaultMessage="Want to learn more?"
        id="datasetManagement.emptyDatasetPrompt.learnMore"
      />
    </EuiDescriptionListTitle>
    <EuiDescriptionListDescription>
      <EuiLink
        external={true}
        href="testUrl"
        target="_blank"
      >
        <MemoizedFormattedMessage
          defaultMessage="Read documentation"
          id="datasetManagement.emptyDatasetPrompt.documentation"
        />
      </EuiLink>
    </EuiDescriptionListDescription>
  </EuiDescriptionList>
</EuiPageContent>
`;

exports[`EmptyDatasetPrompt should render normally with onCreateDataset 1`] = `
<EuiPageContent
  className="inpEmptyDatasetPrompt"
  data-test-subj="emptyDatasetPrompt"
  grow={false}
  horizontalPosition="center"
>
  <EuiFlexGroup
    alignItems="center"
    direction="rowReverse"
    gutterSize="xl"
    wrap={true}
  >
    <EuiFlexItem
      className="inpEmptyDatasetPrompt__illustration"
      grow={1}
    >
      <DatasetIllustration />
    </EuiFlexItem>
    <EuiFlexItem
      className="inpEmptyDatasetPrompt__text"
      grow={2}
    >
      <EuiText
        grow={false}
      >
        <h2>
          <MemoizedFormattedMessage
            defaultMessage="You have data in OpenSearch."
            id="datasetManagement.emptyDatasetPrompt.youHaveData"
          />
          <br />
          <MemoizedFormattedMessage
            defaultMessage="Now, create an index pattern."
            id="datasetManagement.emptyDatasetPrompt.nowCreate"
          />
        </h2>
        <p>
          <MemoizedFormattedMessage
            defaultMessage="OpenSearch Dashboards requires an index pattern to identify which indices you want to explore. An index pattern can point to a specific index, for example, your log data from yesterday, or all indices that contain your log data."
            id="datasetManagement.emptyDatasetPrompt.datasetExplanation"
          />
        </p>
        <CreateDatasetButton
          onCreateDataset={[MockFunction]}
        >
          <MemoizedFormattedMessage
            defaultMessage="Create dataset"
            id="datasetManagement.datasetTable.createButton"
          />
        </CreateDatasetButton>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="xxl"
  />
  <EuiDescriptionList
    className="inpEmptyDatasetPrompt__footer"
    type="responsiveColumn"
  >
    <EuiDescriptionListTitle
      className="inpEmptyDatasetPrompt__title"
    >
      <MemoizedFormattedMessage
        defaultMessage="Want to learn more?"
        id="datasetManagement.emptyDatasetPrompt.learnMore"
      />
    </EuiDescriptionListTitle>
    <EuiDescriptionListDescription>
      <EuiLink
        external={true}
        href="testUrl"
        target="_blank"
      >
        <MemoizedFormattedMessage
          defaultMessage="Read documentation"
          id="datasetManagement.emptyDatasetPrompt.documentation"
        />
      </EuiLink>
    </EuiDescriptionListDescription>
  </EuiDescriptionList>
</EuiPageContent>
`;
